# seine

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile  README.md  seine.py  setup.py  test.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.rpmbuild/: Makefile  prepare.sh
apt/conf/: distributions
debian/: .gitignore  changelog  control  rules
examples/common/: amd64.yaml  bookworm.yaml  buster.yaml  conf-accounts.yaml  conf-locales.yaml  localepurge.yaml  nanopi-neo-image.yaml  pc-image.yaml
examples/extend-docker-image/: main.yaml
examples/nanopi-neo-image/: main.yaml
examples/nilfs2-image/: main.yaml
examples/pc-image/: amd64.yaml  conf-locales.yaml  french.yaml  main.yaml  pc-image.yaml  selinux.yaml
modules/seine/: README.md  requirements.txt  seine  setup.cfg  setup.py
modules/seine/debian/: .gitignore  control
modules/seine/debian/source/: options
redhat/: seine.spec.in
scripts/: build.sh
scripts/bionic/: build-deps.dockerfile  install-deps.dockerfile  seine.list
scripts/buster/: build-deps.dockerfile  install-deps.dockerfile  seine.list
seine/: __init__.py  bootstrap.py  build.py  cli.py  cmd.py  image.py  imager.py  partition.py  qemu.py  sbom.py  utils.py
support/bionic/etc/: build-deps.dockerfile  install-deps.dockerfile
support/bookworm/etc/: build-deps.dockerfile  install-deps.dockerfile  seine.list
support/buster/etc/: build-deps.dockerfile  (+1 more)
support/debian/: build.sh
support/redhat/: build.sh
tests/: accounts.yaml  amd64.yaml  buster.yaml  french.yaml  test.yaml
tests/spec/: basic.py  merge.py  partitions.py
(+6 files in other folders)
