[metadata]
name = seine
home-page = https://github.com/chombourger/seine
summary = scripts to build system images
description-file =
    README.md
author = Cedric Hombourger
long_description_content_type = text/markdown
author_email = chombourger@gmail.com
license = Apache Software License
project_urls =
    Bug Tracker = https://github.com/chombourger/seine/issues
    Source Code = https://github.com/chombourger/seine
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
keywords = podman
requires-dist =
    setuptools
    wheel

[files]
packages =
    seine

[extras]
devel=
    fixtures

[bdist_wheel]
universal = 1
